--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,15 @@ before_install:
   - docker build -t forword/docker-react -f Dockerfile.dev .
 script:
   - docker run forword/docker-react npm run test -- --coverage
-
+deploly:
+  provide: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-1-243172625123"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "AWS_SECRET_KEY"
